fix .fake-file-wrap position

--- a/app/assets/stylesheets/less/_hiveUI.less
+++ b/app/assets/stylesheets/less/_hiveUI.less
@@ -128,7 +128,7 @@ button.nbtn {
     
     .file {
         position: absolute; z-index:2; cursor:pointer; 
-        top:0; left: -15px; width:100px;
+        top:0; left: 5px; /*-15px;*/ width:100px;
         .opacity(0);
     }    
 }
